Add ability to use multiple models
